--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "convex": "^1.4.1",
+    "emoji-picker-react": "^4.5.3",
     "lucide-react": "^0.288.0",
     "next": "13.5.5",
     "next-themes": "^0.2.1",
